--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "react": "^18.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.9",
     "yup": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
